syntax = "proto3";

option java_package = "com.wblog.proto";
option java_outer_classname = "WblogMsgProto";
import "google/protobuf/timestamp.proto";

message WblogMsgPojo{
    string id = 1;
    string msgSender = 2;
    string msgReceiver = 3;
    string msgContent = 4;
    int32 status = 5;
    google.protobuf.Timestamp createDate = 6;
}
message AddWblogMsgReq{
    WblogMsgPojo pojo = 1;
}
message AddWblogMsgRes{
    int32 code = 1;
    string desc = 2;
    bool result = 3;
}

message FindWblogContentByPageReq{
    int32 page = 1;
    int32 size = 2;
    string creator = 3;
    string sender = 4;
}

message FindWblogContentByPageRes{
    repeated WblogMsgPojo result = 1;
    string desc = 2;
    int32 code = 3;
}

message DeleteMsgReq{
    string id = 1;
    string nickName = 2;
}
message DeleteMsgRes{
    int32 code = 1;
    string desc = 2;
    bool result = 3;
}